--- a/.cloudflared/config.yml
+++ b/.cloudflared/config.yml
@@ -6,6 +6,10 @@ ingress:
     service: http://localhost:8888
   - hostname: nhlteams.taylorshome.cc
     service: http://localhost:3050
+  - hostname: claudecad.taylorshome.cc
+    service: http://localhost:4000
+  - hostname: prints.taylorshome.cc
+    service: http://localhost:3000
   - hostname: m900.taylorshome.cc
     service: https://localhost:9090
     originRequest:
